# $Id$

2007-07-01	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveIdentifier.class.php: added ability
	get object not only by getById method.

2007-07-01	Konstantin V. Arkhipov

	* core/Form/Filters/NewLinesToBreaks.class.php,
	core/Form/Filters/UnixToUnixDecode.class.php,
	core/Form/Filters/UnixToUnixEncode.class.php: introduced.

	* core/Form/Filters/TrimFilter.class.php: direction support added.

	* main/Utils/ClassUtils.class.php: callStaticMethod, checkStaticMethod
	methods added.

2007-06-30	Sergey M. Skachkov

	* core/Form/Filter.class.php: trim() now return new TrimFilter
	instance.

	* core/Form/Filters/TrimFilter.class.php: charlist support added.

2007-06-29	Anton E. Lebedevich

	* main/Utils/ArrayUtils.class.php: getMirrorValues() deprecated.

	* main/Utils/HeaderUtils.class.php: redirect() deprecated.

	*  main/Utils/TextUtils.class.php: normalizeUri added.

2007-06-28	Ivan Y. Khvostishkov

	* main/Utils/: ContentTypeHeader.class.php,
	DoctypeDeclaration.class.php, CommonDoctypeDeclaration.class.php:
	introduced.

2007-06-28	Denis M. Gabaidulin

	* core/Form/Form.class.php: importPrimitive method patched for
	correction work with primitive aliases when Form import data from raw
	http.

2007-06-27	Ivan Y. Khvostishkov

	* main/Utils/IO/: BufferedInputStream, FileInputStream and
	StringInputStream implemented, changed default behaviour for parent
	classes.

2007-06-27	Denis M. Gabaidulin

	* main/Flow/ModelAndView.class.php: viewIsNormal method added.

2007-06-25	Konstantin V. Arkhipov

	 * main/DAOs/Workers/BaseDaoWorker.class.php: fixed incomplete objects
	 by-query caching.

2007-06-22	Anton E. Lebedevich

	* main/Base/Calendar*: calendar moved to Date.

2007-06-21	Dmitry A. Lomash

	* test/main/FeedReaderTest.class.php: added tests for FeedReader.

2007-06-21	Dmitry A. Lomash

	* main/Utils/Feed/: added feed manipulation classes.

2007-06-20	Konstantin V. Arkhipov

	* main/DAOs/: low-level cache stuff isolated from mere mortals: